Update dev in current.json

--- a/i18n/en-us/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en-us/docusaurus-plugin-content-docs/current.json
@@ -1,6 +1,6 @@
 {
   "version.label": {
-    "message": "dev",
+    "message": "dev版本",
     "description": "The label for version current"
   },
   "sidebar.docsSidebar.category.Introduction": {
