update release doc after graduate to tlp

--- a/i18n/en-us/docusaurus-plugin-content-blog/authors.yml
+++ b/i18n/en-us/docusaurus-plugin-content-blog/authors.yml
@@ -1,12 +1,12 @@
 chaokunyang:
   name: Shawn Yang
-  title: Apache Fory PPMC Member
+  title: Apache Fory PMC Member
   url: https://github.com/chaokunyang
   image_url: /img/authors/chaokunyang.png
 
 wangweipeng:
   name: Weipeng Wang
-  title: Apache Fory PPMC Member
+  title: Apache Fory PMC Member
   url: https://github.com/theweipeng
   image_url: /img/authors/wangweipeng.png
 
