--- a/i18n/en-us/docusaurus-plugin-content-blog/authors.yml
+++ b/i18n/en-us/docusaurus-plugin-content-blog/authors.yml
@@ -1,6 +1,6 @@
 chaokunyang:
   name: Shawn Yang
-  title: Apache Fory PMC Member
+  title: Apache Fory PMC Chair
   url: https://github.com/chaokunyang
   image_url: /img/authors/chaokunyang.png
 
