--- a/i18n/en-us/docusaurus-theme-classic/footer.json
+++ b/i18n/en-us/docusaurus-theme-classic/footer.json
@@ -44,7 +44,7 @@
     "description": "The label of footer link with label=Website linking to https://github.com/apache/fory-site"
   },
   "copyright": {
-    "message": "<div>\n      <p> Apache Fory is an effort undergoing incubation at The Apache Software Foundation (ASF), sponsored by the Apache Incubator. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF. </p>\n      <p>\n        Copyright © 2024 The Apache Software Foundation, Licensed under the Apache License, Version 2.0. <br/>\n        Apache, the names of Apache projects, and the feather logo are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries.\n      </p>\n      </div>",
+    "message": "<div>\n      <p> Copyright © 2025 The Apache Software Foundation, Licensed under the Apache License, Version 2.0. <br/>\n        Apache, the names of Apache projects, and the feather logo are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries.\n      </p>\n      </div>",
     "description": "The footer copyright"
   },
   "logo.alt": {
