--- a/i18n/zh-CN/docusaurus-theme-classic/footer.json
+++ b/i18n/zh-CN/docusaurus-theme-classic/footer.json
@@ -44,7 +44,7 @@
     "description": "The label of footer link with label=Website linking to https://github.com/apache/fory-site"
   },
   "copyright": {
-    "message": "<div>\n      <p> Apache Fory 是 Apache 软件基金会（ASF）孵化过程中的一个项目，由 Apache Incubator 赞助。孵化是所有新接受项目所需的，直到进一步审查表明基础设施、通信和决策过程已经稳定到与其他成功的 ASF 项目一致的程度。虽然孵化状态不一定反映代码的完整性或稳定性，但它确实表明该项目尚未完全获得 ASF 的认可。 </p>\n      <p>\n        版权所有 © 2024 The Apache Software Foundation，许可证：Apache License, Version 2.0。 <br/>\n        Apache、Apache 项目的名称以及羽毛标志是 Apache 软件基金会在美国和/或其他国家的注册商标或商标。\n      </p>\n      </div>",
+    "message": "<div>\n      <p> 版权所有 © 2025 The Apache Software Foundation，许可证：Apache License, Version 2.0。 <br/>\n        Apache、Apache 项目的名称以及羽毛标志是 Apache 软件基金会在美国和/或其他国家的注册商标或商标。\n      </p>\n      </div>",
     "description": "The footer copyright"
   },
   "logo.alt": {
