--- a/i18n/en-us/docusaurus-theme-classic/footer.json
+++ b/i18n/en-us/docusaurus-theme-classic/footer.json
@@ -44,7 +44,7 @@
     "description": "The label of footer link with label=Website linking to https://github.com/apache/fory-site"
   },
   "copyright": {
-    "message": "<div>\n      <p> Copyright © 2025 The Apache Software Foundation, Licensed under the Apache License, Version 2.0. <br/>\n        Apache, the names of Apache projects, and the feather logo are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries.\n      </p>\n      </div>",
+    "message": "<div>\n      <p> Copyright © 2025 The Apache Software Foundation, Licensed under the Apache License, Version 2.0. <br/>\n        Apache Fory, Fory, Apache, the Apache Logo and the Apache Fory logo are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries.\n      </p>\n      </div>",
     "description": "The footer copyright"
   },
   "logo.alt": {
