--- a/blog/2025-09-23-fory_0_12_3_release.md
+++ b/blog/2025-09-23-fory_0_12_3_release.md
@@ -9,12 +9,12 @@ The Apache Fory team is pleased to announce the 0.12.3 release. This is a minor 
 
 ## Features
 
-* feat(java): support concurent map serialization when being updated by @chaokunyang  in https://github.com/apache/fory/pull/2617
-* feat(python): support limit pyfory depth by @chaokunyang  in https://github.com/apache/fory/pull/2625
-* feat(python): drop-in replacement for pickle serialization by @chaokunyang  in https://github.com/apache/fory/pull/2629
+- feat(java): support concurent map serialization when being updated by @chaokunyang in https://github.com/apache/fory/pull/2617
+- feat(python): support limit pyfory depth by @chaokunyang in https://github.com/apache/fory/pull/2625
+- feat(python): drop-in replacement for pickle serialization by @chaokunyang in https://github.com/apache/fory/pull/2629
 
 ## Bug Fixes
 
-* fix(java): fix get nested genericType for codegen by @chaokunyang  in https://github.com/apache/fory/pull/2632
+- fix(java): fix get nested genericType for codegen by @chaokunyang in https://github.com/apache/fory/pull/2632
 
 **Full Changelog**: https://github.com/apache/fory/compare/v0.12.2...v0.12.3
